--- a/account_service/dockerfile
+++ b/account_service/dockerfile
@@ -1,7 +1,7 @@
 FROM python:3
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
-WORKDIR /code
-COPY requirements.txt /code/
+WORKDIR /app/account_service
+COPY requirements.txt /app/account_service
 RUN pip install -r requirements.txt
-COPY . /code/
+COPY . /app/account_service
